// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Successful rendering 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="subcontainerInner"
      >
        <div
          class="subcontainerInner__sectionTitle"
        >
          <b>
            Estimated 10-year risk for MACE (MI, stroke, CV-death)
          </b>
        </div>
        <div
          class="subcontainerInner__sectionBody subcontainerInner__chartContainer"
        />
      </div>
      <div
        class="subcontainerInner subcontainerInner__inputContainer"
      >
        <div
          class="subcontainerInner__sectionTitle"
        >
          <b>
            Intended treatments
          </b>
        </div>
        <div
          class="subcontainerInner__sectionBody"
        >
          <div
            class="subcontainerInner__sectionInfo col-md-12"
          >
            <span
              class="boldText"
            >
              <i
                class="fa info-circle"
              />
                
              Select intended treatments to calculate updated estimated risk.
            </span>
          </div>
          <b>
            Lipid-lowering
          </b>
          <br />
          <div
            class="checkDropGroupContainer form-group row"
          >
            <div
              class="flexContainer col-md-5"
            >
              <div
                class="customCheckbox form-check"
              >
                <input
                  class="form-check-input"
                  id="statin"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="statin"
                  title=""
                >
                  Statin*
                </label>
              </div>
            </div>
            <div
              class="col-md-6"
            >
              <div
                class=" css-14jk2my-container"
              >
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                />
                <div
                  class=" css-1fhf3k1-control"
                >
                  <div
                    class=" css-l1xr2i-Component"
                  >
                    <div
                      class=" css-1wa3eu0-placeholder"
                    >
                      Select one...
                    </div>
                    <div
                      class="css-1yjf4xh-Component"
                    >
                      <div
                        class=""
                        style="display: inline-block;"
                      >
                        <input
                          aria-autocomplete="list"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          disabled=""
                          id="react-select-2-input"
                          spellcheck="false"
                          style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class=" css-ny0e4k-Component"
                  >
                    <span
                      class=" css-109onse-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-tlfecz-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="invalid-feedback"
            />
          </div>
          <div
            class="checkboxContainer form-group row"
          >
            <div
              class="col-md-auto"
            >
              <div
                class="customCheckbox form-check"
              >
                <input
                  class="form-check-input"
                  id="isPCSK9Ihibitor"
                  name="isPCSK9Ihibitor"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="isPCSK9Ihibitor"
                  title=""
                >
                  PCSK9 Inhibitor (Alirocumab, Evolocumab)
                </label>
              </div>
              <div
                class="customCheckboxFeedback invalid-feedback"
              />
            </div>
          </div>
          <div
            class="checkboxContainer form-group row"
          >
            <div
              class="col-md-auto"
            >
              <div
                class="customCheckbox form-check"
              >
                <input
                  class="form-check-input"
                  id="isEzetimib"
                  name="isEzetimib"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="isEzetimib"
                  title=""
                >
                  Ezetimibe
                </label>
              </div>
              <div
                class="customCheckboxFeedback invalid-feedback"
              />
            </div>
          </div>
          <b>
            AntiPlatelet / Anticoagulant
          </b>
          <br />
          <div
            class="checkboxContainer form-group row"
          >
            <div
              class="col-md-auto"
            >
              <div
                class="customCheckbox form-check"
              >
                <input
                  class="form-check-input"
                  id="isAspirin"
                  name="isAspirin"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="isAspirin"
                  title=""
                >
                  Aspirin
                </label>
              </div>
              <div
                class="customCheckboxFeedback invalid-feedback"
              />
            </div>
          </div>
          <div
            class="checkDropGroupContainer form-group row"
          >
            <div
              class="flexContainer col-md-5"
            >
              <div
                class="customCheckbox form-check"
              >
                <input
                  class="form-check-input"
                  id="p2Y12Inhibitors"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="p2Y12Inhibitors"
                  title=""
                >
                  P2Y12 Inhibitors
                </label>
              </div>
            </div>
            <div
              class="col-md-6"
            >
              <div
                class=" css-14jk2my-container"
              >
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                />
                <div
                  class=" css-1fhf3k1-control"
                >
                  <div
                    class=" css-l1xr2i-Component"
                  >
                    <div
                      class=" css-1wa3eu0-placeholder"
                    >
                      Select one...
                    </div>
                    <div
                      class="css-1yjf4xh-Component"
                    >
                      <div
                        class=""
                        style="display: inline-block;"
                      >
                        <input
                          aria-autocomplete="list"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          disabled=""
                          id="react-select-3-input"
                          spellcheck="false"
                          style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class=" css-ny0e4k-Component"
                  >
                    <span
                      class=" css-109onse-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-tlfecz-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="invalid-feedback"
            />
          </div>
          <div
            class="checkboxContainer form-group row"
          >
            <div
              class="col-md-auto"
            >
              <div
                class="customCheckbox form-check"
              >
                <input
                  class="form-check-input"
                  id="isRivaroxaban"
                  name="isRivaroxaban"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="isRivaroxaban"
                  title=""
                >
                  Low-dose Rivaroxaban (2.5 mg)
                </label>
              </div>
              <div
                class="customCheckboxFeedback invalid-feedback"
              />
            </div>
          </div>
          <b>
            Diabetes
          </b>
          <br />
          <div
            class="checkboxContainer form-group row"
          >
            <div
              class="col-md-auto"
            >
              <div
                class="customCheckbox form-check"
              >
                <input
                  class="form-check-input"
                  disabled=""
                  id="isSGLT2Inhibitors"
                  name="isSGLT2Inhibitors"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="isSGLT2Inhibitors"
                  title=""
                >
                  SGLT2 Inhibitor (e.g. Dapagliflozin, Empagliflozin, etc.)
                </label>
              </div>
              <div
                class="customCheckboxFeedback invalid-feedback"
              />
            </div>
          </div>
          <div
            class="checkboxContainer form-group row"
          >
            <div
              class="col-md-auto"
            >
              <div
                class="customCheckbox form-check"
              >
                <input
                  class="form-check-input"
                  disabled=""
                  id="isGLP1ReceptorAgonists"
                  name="isGLP1ReceptorAgonists"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="isGLP1ReceptorAgonists"
                  title=""
                >
                  GLP1 Receptor Agonists (e.g. Semaglutide, Liraglutide, etc.)
                </label>
              </div>
              <div
                class="customCheckboxFeedback invalid-feedback"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="subcontainerInner"
    >
      <div
        class="subcontainerInner__sectionTitle"
      >
        <b>
          Estimated 10-year risk for MACE (MI, stroke, CV-death)
        </b>
      </div>
      <div
        class="subcontainerInner__sectionBody subcontainerInner__chartContainer"
      />
    </div>
    <div
      class="subcontainerInner subcontainerInner__inputContainer"
    >
      <div
        class="subcontainerInner__sectionTitle"
      >
        <b>
          Intended treatments
        </b>
      </div>
      <div
        class="subcontainerInner__sectionBody"
      >
        <div
          class="subcontainerInner__sectionInfo col-md-12"
        >
          <span
            class="boldText"
          >
            <i
              class="fa info-circle"
            />
              
            Select intended treatments to calculate updated estimated risk.
          </span>
        </div>
        <b>
          Lipid-lowering
        </b>
        <br />
        <div
          class="checkDropGroupContainer form-group row"
        >
          <div
            class="flexContainer col-md-5"
          >
            <div
              class="customCheckbox form-check"
            >
              <input
                class="form-check-input"
                id="statin"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="statin"
                title=""
              >
                Statin*
              </label>
            </div>
          </div>
          <div
            class="col-md-6"
          >
            <div
              class=" css-14jk2my-container"
            >
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
              />
              <div
                class=" css-1fhf3k1-control"
              >
                <div
                  class=" css-l1xr2i-Component"
                >
                  <div
                    class=" css-1wa3eu0-placeholder"
                  >
                    Select one...
                  </div>
                  <div
                    class="css-1yjf4xh-Component"
                  >
                    <div
                      class=""
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        disabled=""
                        id="react-select-2-input"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-ny0e4k-Component"
                >
                  <span
                    class=" css-109onse-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="invalid-feedback"
          />
        </div>
        <div
          class="checkboxContainer form-group row"
        >
          <div
            class="col-md-auto"
          >
            <div
              class="customCheckbox form-check"
            >
              <input
                class="form-check-input"
                id="isPCSK9Ihibitor"
                name="isPCSK9Ihibitor"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="isPCSK9Ihibitor"
                title=""
              >
                PCSK9 Inhibitor (Alirocumab, Evolocumab)
              </label>
            </div>
            <div
              class="customCheckboxFeedback invalid-feedback"
            />
          </div>
        </div>
        <div
          class="checkboxContainer form-group row"
        >
          <div
            class="col-md-auto"
          >
            <div
              class="customCheckbox form-check"
            >
              <input
                class="form-check-input"
                id="isEzetimib"
                name="isEzetimib"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="isEzetimib"
                title=""
              >
                Ezetimibe
              </label>
            </div>
            <div
              class="customCheckboxFeedback invalid-feedback"
            />
          </div>
        </div>
        <b>
          AntiPlatelet / Anticoagulant
        </b>
        <br />
        <div
          class="checkboxContainer form-group row"
        >
          <div
            class="col-md-auto"
          >
            <div
              class="customCheckbox form-check"
            >
              <input
                class="form-check-input"
                id="isAspirin"
                name="isAspirin"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="isAspirin"
                title=""
              >
                Aspirin
              </label>
            </div>
            <div
              class="customCheckboxFeedback invalid-feedback"
            />
          </div>
        </div>
        <div
          class="checkDropGroupContainer form-group row"
        >
          <div
            class="flexContainer col-md-5"
          >
            <div
              class="customCheckbox form-check"
            >
              <input
                class="form-check-input"
                id="p2Y12Inhibitors"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="p2Y12Inhibitors"
                title=""
              >
                P2Y12 Inhibitors
              </label>
            </div>
          </div>
          <div
            class="col-md-6"
          >
            <div
              class=" css-14jk2my-container"
            >
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
              />
              <div
                class=" css-1fhf3k1-control"
              >
                <div
                  class=" css-l1xr2i-Component"
                >
                  <div
                    class=" css-1wa3eu0-placeholder"
                  >
                    Select one...
                  </div>
                  <div
                    class="css-1yjf4xh-Component"
                  >
                    <div
                      class=""
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        disabled=""
                        id="react-select-3-input"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-ny0e4k-Component"
                >
                  <span
                    class=" css-109onse-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="invalid-feedback"
          />
        </div>
        <div
          class="checkboxContainer form-group row"
        >
          <div
            class="col-md-auto"
          >
            <div
              class="customCheckbox form-check"
            >
              <input
                class="form-check-input"
                id="isRivaroxaban"
                name="isRivaroxaban"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="isRivaroxaban"
                title=""
              >
                Low-dose Rivaroxaban (2.5 mg)
              </label>
            </div>
            <div
              class="customCheckboxFeedback invalid-feedback"
            />
          </div>
        </div>
        <b>
          Diabetes
        </b>
        <br />
        <div
          class="checkboxContainer form-group row"
        >
          <div
            class="col-md-auto"
          >
            <div
              class="customCheckbox form-check"
            >
              <input
                class="form-check-input"
                disabled=""
                id="isSGLT2Inhibitors"
                name="isSGLT2Inhibitors"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="isSGLT2Inhibitors"
                title=""
              >
                SGLT2 Inhibitor (e.g. Dapagliflozin, Empagliflozin, etc.)
              </label>
            </div>
            <div
              class="customCheckboxFeedback invalid-feedback"
            />
          </div>
        </div>
        <div
          class="checkboxContainer form-group row"
        >
          <div
            class="col-md-auto"
          >
            <div
              class="customCheckbox form-check"
            >
              <input
                class="form-check-input"
                disabled=""
                id="isGLP1ReceptorAgonists"
                name="isGLP1ReceptorAgonists"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="isGLP1ReceptorAgonists"
                title=""
              >
                GLP1 Receptor Agonists (e.g. Semaglutide, Liraglutide, etc.)
              </label>
            </div>
            <div
              class="customCheckboxFeedback invalid-feedback"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Successful update 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="subcontainerInner"
      >
        <div
          class="subcontainerInner__sectionTitle"
        >
          <b>
            Estimated 10-year risk for MACE (MI, stroke, CV-death)
          </b>
        </div>
        <div
          class="subcontainerInner__sectionBody subcontainerInner__chartContainer"
        />
      </div>
      <div
        class="subcontainerInner subcontainerInner__inputContainer"
      >
        <div
          class="subcontainerInner__sectionTitle"
        >
          <b>
            Intended treatments
          </b>
        </div>
        <div
          class="subcontainerInner__sectionBody"
        >
          <div
            class="subcontainerInner__sectionInfo col-md-12"
          >
            <span
              class="boldText"
            >
              <i
                class="fa info-circle"
              />
                
              Select intended treatments to calculate updated estimated risk.
            </span>
          </div>
          <b>
            Lipid-lowering
          </b>
          <br />
          <div
            class="checkDropGroupContainer form-group row"
          >
            <div
              class="flexContainer col-md-5"
            >
              <div
                class="customCheckbox form-check"
              >
                <input
                  class="form-check-input"
                  id="statin"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="statin"
                  title=""
                >
                  Statin*
                </label>
              </div>
            </div>
            <div
              class="col-md-6"
            >
              <div
                class=" css-14jk2my-container"
              >
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                />
                <div
                  class=" css-1fhf3k1-control"
                >
                  <div
                    class=" css-l1xr2i-Component"
                  >
                    <div
                      class=" css-1wa3eu0-placeholder"
                    >
                      Select one...
                    </div>
                    <div
                      class="css-1yjf4xh-Component"
                    >
                      <div
                        class=""
                        style="display: inline-block;"
                      >
                        <input
                          aria-autocomplete="list"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          disabled=""
                          id="react-select-4-input"
                          spellcheck="false"
                          style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class=" css-ny0e4k-Component"
                  >
                    <span
                      class=" css-109onse-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-tlfecz-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="invalid-feedback"
            />
          </div>
          <div
            class="checkboxContainer form-group row"
          >
            <div
              class="col-md-auto"
            >
              <div
                class="customCheckbox form-check"
              >
                <input
                  class="form-check-input"
                  id="isPCSK9Ihibitor"
                  name="isPCSK9Ihibitor"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="isPCSK9Ihibitor"
                  title=""
                >
                  PCSK9 Inhibitor (Alirocumab, Evolocumab)
                </label>
              </div>
              <div
                class="customCheckboxFeedback invalid-feedback"
              />
            </div>
          </div>
          <div
            class="checkboxContainer form-group row"
          >
            <div
              class="col-md-auto"
            >
              <div
                class="customCheckbox form-check"
              >
                <input
                  class="form-check-input"
                  id="isEzetimib"
                  name="isEzetimib"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="isEzetimib"
                  title=""
                >
                  Ezetimibe
                </label>
              </div>
              <div
                class="customCheckboxFeedback invalid-feedback"
              />
            </div>
          </div>
          <b>
            AntiPlatelet / Anticoagulant
          </b>
          <br />
          <div
            class="checkboxContainer form-group row"
          >
            <div
              class="col-md-auto"
            >
              <div
                class="customCheckbox form-check"
              >
                <input
                  class="form-check-input"
                  id="isAspirin"
                  name="isAspirin"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="isAspirin"
                  title=""
                >
                  Aspirin
                </label>
              </div>
              <div
                class="customCheckboxFeedback invalid-feedback"
              />
            </div>
          </div>
          <div
            class="checkDropGroupContainer form-group row"
          >
            <div
              class="flexContainer col-md-5"
            >
              <div
                class="customCheckbox form-check"
              >
                <input
                  class="form-check-input"
                  id="p2Y12Inhibitors"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="p2Y12Inhibitors"
                  title=""
                >
                  P2Y12 Inhibitors
                </label>
              </div>
            </div>
            <div
              class="col-md-6"
            >
              <div
                class=" css-14jk2my-container"
              >
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                />
                <div
                  class=" css-1fhf3k1-control"
                >
                  <div
                    class=" css-l1xr2i-Component"
                  >
                    <div
                      class=" css-1wa3eu0-placeholder"
                    >
                      Select one...
                    </div>
                    <div
                      class="css-1yjf4xh-Component"
                    >
                      <div
                        class=""
                        style="display: inline-block;"
                      >
                        <input
                          aria-autocomplete="list"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          disabled=""
                          id="react-select-5-input"
                          spellcheck="false"
                          style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class=" css-ny0e4k-Component"
                  >
                    <span
                      class=" css-109onse-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-tlfecz-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="invalid-feedback"
            />
          </div>
          <div
            class="checkboxContainer form-group row"
          >
            <div
              class="col-md-auto"
            >
              <div
                class="customCheckbox form-check"
              >
                <input
                  class="form-check-input"
                  id="isRivaroxaban"
                  name="isRivaroxaban"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="isRivaroxaban"
                  title=""
                >
                  Low-dose Rivaroxaban (2.5 mg)
                </label>
              </div>
              <div
                class="customCheckboxFeedback invalid-feedback"
              />
            </div>
          </div>
          <b>
            Diabetes
          </b>
          <br />
          <div
            class="checkboxContainer form-group row"
          >
            <div
              class="col-md-auto"
            >
              <div
                class="customCheckbox form-check"
              >
                <input
                  class="form-check-input"
                  id="isSGLT2Inhibitors"
                  name="isSGLT2Inhibitors"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="isSGLT2Inhibitors"
                  title=""
                >
                  SGLT2 Inhibitor (e.g. Dapagliflozin, Empagliflozin, etc.)
                </label>
              </div>
              <div
                class="customCheckboxFeedback invalid-feedback"
              />
            </div>
          </div>
          <div
            class="checkboxContainer form-group row"
          >
            <div
              class="col-md-auto"
            >
              <div
                class="customCheckbox form-check"
              >
                <input
                  class="form-check-input"
                  id="isGLP1ReceptorAgonists"
                  name="isGLP1ReceptorAgonists"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="isGLP1ReceptorAgonists"
                  title=""
                >
                  GLP1 Receptor Agonists (e.g. Semaglutide, Liraglutide, etc.)
                </label>
              </div>
              <div
                class="customCheckboxFeedback invalid-feedback"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="subcontainerInner"
    >
      <div
        class="subcontainerInner__sectionTitle"
      >
        <b>
          Estimated 10-year risk for MACE (MI, stroke, CV-death)
        </b>
      </div>
      <div
        class="subcontainerInner__sectionBody subcontainerInner__chartContainer"
      />
    </div>
    <div
      class="subcontainerInner subcontainerInner__inputContainer"
    >
      <div
        class="subcontainerInner__sectionTitle"
      >
        <b>
          Intended treatments
        </b>
      </div>
      <div
        class="subcontainerInner__sectionBody"
      >
        <div
          class="subcontainerInner__sectionInfo col-md-12"
        >
          <span
            class="boldText"
          >
            <i
              class="fa info-circle"
            />
              
            Select intended treatments to calculate updated estimated risk.
          </span>
        </div>
        <b>
          Lipid-lowering
        </b>
        <br />
        <div
          class="checkDropGroupContainer form-group row"
        >
          <div
            class="flexContainer col-md-5"
          >
            <div
              class="customCheckbox form-check"
            >
              <input
                class="form-check-input"
                id="statin"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="statin"
                title=""
              >
                Statin*
              </label>
            </div>
          </div>
          <div
            class="col-md-6"
          >
            <div
              class=" css-14jk2my-container"
            >
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
              />
              <div
                class=" css-1fhf3k1-control"
              >
                <div
                  class=" css-l1xr2i-Component"
                >
                  <div
                    class=" css-1wa3eu0-placeholder"
                  >
                    Select one...
                  </div>
                  <div
                    class="css-1yjf4xh-Component"
                  >
                    <div
                      class=""
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        disabled=""
                        id="react-select-4-input"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-ny0e4k-Component"
                >
                  <span
                    class=" css-109onse-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="invalid-feedback"
          />
        </div>
        <div
          class="checkboxContainer form-group row"
        >
          <div
            class="col-md-auto"
          >
            <div
              class="customCheckbox form-check"
            >
              <input
                class="form-check-input"
                id="isPCSK9Ihibitor"
                name="isPCSK9Ihibitor"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="isPCSK9Ihibitor"
                title=""
              >
                PCSK9 Inhibitor (Alirocumab, Evolocumab)
              </label>
            </div>
            <div
              class="customCheckboxFeedback invalid-feedback"
            />
          </div>
        </div>
        <div
          class="checkboxContainer form-group row"
        >
          <div
            class="col-md-auto"
          >
            <div
              class="customCheckbox form-check"
            >
              <input
                class="form-check-input"
                id="isEzetimib"
                name="isEzetimib"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="isEzetimib"
                title=""
              >
                Ezetimibe
              </label>
            </div>
            <div
              class="customCheckboxFeedback invalid-feedback"
            />
          </div>
        </div>
        <b>
          AntiPlatelet / Anticoagulant
        </b>
        <br />
        <div
          class="checkboxContainer form-group row"
        >
          <div
            class="col-md-auto"
          >
            <div
              class="customCheckbox form-check"
            >
              <input
                class="form-check-input"
                id="isAspirin"
                name="isAspirin"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="isAspirin"
                title=""
              >
                Aspirin
              </label>
            </div>
            <div
              class="customCheckboxFeedback invalid-feedback"
            />
          </div>
        </div>
        <div
          class="checkDropGroupContainer form-group row"
        >
          <div
            class="flexContainer col-md-5"
          >
            <div
              class="customCheckbox form-check"
            >
              <input
                class="form-check-input"
                id="p2Y12Inhibitors"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="p2Y12Inhibitors"
                title=""
              >
                P2Y12 Inhibitors
              </label>
            </div>
          </div>
          <div
            class="col-md-6"
          >
            <div
              class=" css-14jk2my-container"
            >
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
              />
              <div
                class=" css-1fhf3k1-control"
              >
                <div
                  class=" css-l1xr2i-Component"
                >
                  <div
                    class=" css-1wa3eu0-placeholder"
                  >
                    Select one...
                  </div>
                  <div
                    class="css-1yjf4xh-Component"
                  >
                    <div
                      class=""
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        disabled=""
                        id="react-select-5-input"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-ny0e4k-Component"
                >
                  <span
                    class=" css-109onse-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="invalid-feedback"
          />
        </div>
        <div
          class="checkboxContainer form-group row"
        >
          <div
            class="col-md-auto"
          >
            <div
              class="customCheckbox form-check"
            >
              <input
                class="form-check-input"
                id="isRivaroxaban"
                name="isRivaroxaban"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="isRivaroxaban"
                title=""
              >
                Low-dose Rivaroxaban (2.5 mg)
              </label>
            </div>
            <div
              class="customCheckboxFeedback invalid-feedback"
            />
          </div>
        </div>
        <b>
          Diabetes
        </b>
        <br />
        <div
          class="checkboxContainer form-group row"
        >
          <div
            class="col-md-auto"
          >
            <div
              class="customCheckbox form-check"
            >
              <input
                class="form-check-input"
                id="isSGLT2Inhibitors"
                name="isSGLT2Inhibitors"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="isSGLT2Inhibitors"
                title=""
              >
                SGLT2 Inhibitor (e.g. Dapagliflozin, Empagliflozin, etc.)
              </label>
            </div>
            <div
              class="customCheckboxFeedback invalid-feedback"
            />
          </div>
        </div>
        <div
          class="checkboxContainer form-group row"
        >
          <div
            class="col-md-auto"
          >
            <div
              class="customCheckbox form-check"
            >
              <input
                class="form-check-input"
                id="isGLP1ReceptorAgonists"
                name="isGLP1ReceptorAgonists"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="isGLP1ReceptorAgonists"
                title=""
              >
                GLP1 Receptor Agonists (e.g. Semaglutide, Liraglutide, etc.)
              </label>
            </div>
            <div
              class="customCheckboxFeedback invalid-feedback"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
